--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230702140931">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230702142505">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -161,7 +161,7 @@
 				</h2>
 				<div class="amount__container">
 					<div class="amount__items" data-watch>
-						<div class="amount__item item-amount" data-watch-threshold='1' data-watch>
+						<div class="amount__item item-amount" data-watch-threshold='1' data-watch data-watch_once>
 							<div class="item-amount__gift"> GIFT</div>
 							<h3 class="item-amount__price">
 								$ 15
@@ -171,7 +171,7 @@
 							</div>
 							<a href="success.html" type="button" class="item-amount__button button button_green">Buy</a>
 						</div>
-						<div class="amount__item item-amount" data-watch-threshold='1' data-watch>
+						<div class="amount__item item-amount" data-watch-threshold='1' data-watch data-watch_once>
 							<div class="item-amount__gift">GIFT</div>
 							<h3 class="item-amount__price">
 								$ 15
@@ -181,7 +181,7 @@
 							</div>
 							<a href="success.html" type="button" class="item-amount__button button button_green">Buy</a>
 						</div>
-						<div class="amount__item item-amount" data-watch-threshold='1' data-watch>
+						<div class="amount__item item-amount" data-watch-threshold='1' data-watch data-watch_once>
 							<div class="item-amount__gift">GIFT</div>
 							<h3 class="item-amount__price">
 								$ 15
@@ -191,7 +191,7 @@
 							</div>
 							<a href="success.html" type="button" class="item-amount__button button button_green">Buy</a>
 						</div>
-						<div class="amount__item item-amount" data-watch-threshold='1' data-watch>
+						<div class="amount__item item-amount" data-watch-threshold='1' data-watch data-watch_once>
 							<div class="item-amount__gift">GIFT</div>
 							<h3 class="item-amount__price">
 								$ 15
@@ -286,8 +286,10 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20230702140931"></script>
-	<script src="https://www.google.com/recaptcha/api.js?_v=20230702140931" async defer></script>
+	<script src="js/app.min.js?_v=20230702142505"></script>
+	<script src="https://www.google.com/recaptcha/api.js?_v=20230702142505" async defer></script>
+
+
 </body>
 
 </html>
