--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230713145528">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230713150409">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -84,7 +84,7 @@
 								<li class="menu-footer__item"><a href="privacy.html" class="menu-footer__link">Privacy policy</a></li>
 								<li class="menu-footer__item"><a href="refund.html" class="menu-footer__link">Refund policy</a></li>
 								<li class="menu-footer__item"><a href="delivery.html" class="menu-footer__link">Delivery policy</a></li>
-								<li class="menu-footer__item"><a href="home.html" class="menu-footer__link" data-goto=".page__contact">Contact us</a></li>
+								<li class="menu-footer__item"><a href="home.html" class="menu-footer__link" data-goto=".page__contact" data-goto-header>Contact us</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -111,8 +111,8 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20230713145528"></script>
-	<script src="https://www.google.com/recaptcha/api.js?_v=20230713145528" async defer></script>
+	<script src="js/app.min.js?_v=20230713150409"></script>
+	<script src="https://www.google.com/recaptcha/api.js?_v=20230713150409" async defer></script>
 
 
 </body>
