--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230713150409">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230714171938">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,9 +20,9 @@
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="home.html" class="menu__link" data-goto=".page__about" data-goto-header>About</a></li>
-							<li class="menu__item"><a href="home.html" class="menu__link" data-goto=".page__how" data-goto-header>How it works</a></li>
-							<li class="menu__item"><a href="home.html" class="menu__link" data-goto=".page__contact" data-goto-header>Contact</a></li>
+							<li class="menu__item"><a href="home.html#about" class="menu__link">About</a></li>
+							<li class="menu__item"><a href="home.html#how" class="menu__link">How it works</a></li>
+							<li class="menu__item"><a href="home.html#contact" class="menu__link">Contact</a></li>
 						</ul>
 						<div class="header__open">
 							<h1 class="open__title">Buy a VPN and get <br> a complimentary gift code for free!</h1>
@@ -84,7 +84,7 @@
 								<li class="menu-footer__item"><a href="privacy.html" class="menu-footer__link">Privacy policy</a></li>
 								<li class="menu-footer__item"><a href="refund.html" class="menu-footer__link">Refund policy</a></li>
 								<li class="menu-footer__item"><a href="delivery.html" class="menu-footer__link">Delivery policy</a></li>
-								<li class="menu-footer__item"><a href="home.html" class="menu-footer__link" data-goto=".page__contact" data-goto-header>Contact us</a></li>
+								<li class="menu-footer__item"><a href="home.html#contact" class="menu-footer__link">Contact us</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -111,8 +111,8 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20230713150409"></script>
-	<script src="https://www.google.com/recaptcha/api.js?_v=20230713150409" async defer></script>
+	<script src="js/app.min.js?_v=20230714171938"></script>
+	<script src="https://www.google.com/recaptcha/api.js?_v=20230714171938" async defer></script>
 
 
 </body>
