--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230714171938">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230714221623">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,13 +55,13 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__about about animation " id="about" data-prlx-parent data-watch="navigator" data-watch data-watch-threshold="0.3">
+			<section class="page__about about" id="about" data-prlx-parent data-watch="navigator" data-watch data-watch-threshold="0.3">
 				<div class="about__container">
 					<div class='about__tecstures' data-prlx><img src="img/tecstures.svg" alt=""></div>
-					<h2 class="about__title title" data-watch data-watch-once>
+					<h2 class="about__title title" data-watch>
 						Gift pin code – what is it?
 					</h2>
-					<div class="about__text text" data-watch data-watch-once>
+					<div class="about__text text" data-watch>
 						<p>
 							By purchasing any VPN package on their web site and entering our promo code: you will not only receive selected VPN package but also a complimentary pin code of the same value.
 						</p>
@@ -71,28 +71,28 @@
 							<div class="item-about__image">
 								<img src="img/About/01.svg" alt="Image">
 							</div>
-							<h5 class="icon-about__title">SHOP</h5>
-							<div class="icon-about__text text">Online shopping service</div>
-						</div>
-						<div class="about__icon" data-da=".item-about_1, 480" data-watch>
-							<img src="img/About/plus.svg" alt="Icon">
+							<h5 class="item-about__title">SHOP</h5>
+							<div class="item-about__text">Online shopping service</div>
+							<div class="about__icon about__icon_1" data-watch>
+								<img src="img/About/plus.svg" alt="Icon">
+							</div>
 						</div>
 						<div class="about__item item-about item-about_2" data-watch>
 							<div class="item-about__image">
 								<img src="img/About/02.svg" alt="Image">
 							</div>
-							<h5 class="icon-about__title">SERVICE</h5>
-							<div class="icon-about__text text">Digital collaborator <br> and e-commerce partner</div>
-						</div>
-						<div class="about__icon about__icon_2" data-da=".item-about_2, 480" data-watch>
-							<img src="img/About/equal.svg" alt="">
+							<h5 class="item-about__title">SERVICE</h5>
+							<div class="item-about__text">Digital collaborator <br> and e-commerce partner</div>
+							<div class="about__icon about__icon_2" data-da=".item-about_2, 480" data-watch>
+								<img src="img/About/equal.svg" alt="">
+							</div>
 						</div>
 						<div class="about__item item-about item-about_3" data-watch>
 							<div class="item-about__image">
 								<img src="img/About/03.svg" alt="Image">
 							</div>
-							<h5 class="icon-about__title">BENEFITS</h5>
-							<div class="icon-about__text text">With our code you get a bunch of bonuses at the shop</div>
+							<h5 class="item-about__title">BENEFITS</h5>
+							<div class="item-about__text">With our code you get a bunch of bonuses at the shop</div>
 						</div>
 					</div>
 					<a href="#" class="about__button button button_green" data-watch>
@@ -100,9 +100,9 @@
 					</a>
 				</div>
 			</section>
-			<section id="how" class="page__how how animation " data-watch="navigator" data-watch-threshold="0.3">
+			<section id="how" class="page__how how animation" data-watch="navigator" data-watch-threshold="0.3">
 				<div class="how__container">
-					<h2 class="how__title title" data-watch data-watch-once>
+					<h2 class="how__title title" data-watch>
 						How does it work?
 					</h2>
 					<div class="how__items">
@@ -156,12 +156,12 @@
 				</div>
 			</section>
 			<section class="page__amount amount">
-				<h2 class="amount__title title" data-watch data-watch-once>
+				<h2 class="amount__title title" data-watch>
 					Select code amount
 				</h2>
 				<div class="amount__container">
 					<div class="amount__items" data-watch>
-						<div class="amount__item item-amount" data-watch-threshold='0.99' data-watch data-watch_once>
+						<div class="amount__item item-amount" data-watch-threshold='0.99' data-watch>
 							<div class="item-amount__gift"> GIFT</div>
 							<h3 class="item-amount__price">
 								$ 15
@@ -171,7 +171,7 @@
 							</div>
 							<a href="success.html" type="button" class="item-amount__button button button_green">Buy</a>
 						</div>
-						<div class="amount__item item-amount" data-watch-threshold='0.99' data-watch data-watch_once>
+						<div class="amount__item item-amount" data-watch-threshold='0.99' data-watch>
 							<div class="item-amount__gift">GIFT</div>
 							<h3 class="item-amount__price">
 								$ 15
@@ -181,7 +181,7 @@
 							</div>
 							<a href="success.html" type="button" class="item-amount__button button button_green">Buy</a>
 						</div>
-						<div class="amount__item item-amount" data-watch-threshold='0.99' data-watch data-watch_once>
+						<div class="amount__item item-amount" data-watch-threshold='0.99' data-watch>
 							<div class="item-amount__gift">GIFT</div>
 							<h3 class="item-amount__price">
 								$ 15
@@ -191,7 +191,7 @@
 							</div>
 							<a href="success.html" type="button" class="item-amount__button button button_green">Buy</a>
 						</div>
-						<div class="amount__item item-amount" data-watch-threshold='0.99' data-watch data-watch_once>
+						<div class="amount__item item-amount" data-watch-threshold='0.99' data-watch>
 							<div class="item-amount__gift">GIFT</div>
 							<h3 class="item-amount__price">
 								$ 15
@@ -204,11 +204,11 @@
 					</div>
 				</div>
 			</section>
-			<section id="contact" class="page__contact animation " data-watch="navigator" data-watch-threshold="0.3">
+			<section id="contact" class="page__contact contact npmnanimation" data-watch="navigator" data-watch-threshold="0.3">
 				<div class="contact__container" data-prlx-parent>
 					<div class='contact__mail' data-prlx><img src="img/Parallax/mail.svg" alt=""></div>
 					<div class="contact__wrapper">
-						<div class="contact__title title">
+						<div class="contact__title title" data-watch>
 							Get in touch
 						</div>
 						<div class="contact__text">
@@ -286,8 +286,8 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20230714171938"></script>
-	<script src="https://www.google.com/recaptcha/api.js?_v=20230714171938" async defer></script>
+	<script src="js/app.min.js?_v=20230714221623"></script>
+	<script src="https://www.google.com/recaptcha/api.js?_v=20230714221623" async defer></script>
 
 
 </body>
